tests/integrations/json-basic-fail/tests/actual_tests/executable_compile_err.stderr
error: this file contains an unclosed delimiter
 --> tests/actual_tests/executable_compile_err.rs:4:2
  |
3 | fn main() {
  |           - unclosed delimiter
4 |
  |  ^

error: aborting due to 1 previous error

